Fix: Hydration error, translations, URL persistence, and login flash

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -561,5 +561,34 @@
   "audit.action.activity": "نشاط",
   "audit.details.none": "لا توجد تفاصيل",
   "login.cache_cleared": "تم تنظيف الكاش",
-  "login.cache_cleared_desc": "جرّب تسجيل الدخول مرة أخرى."
+  "login.cache_cleared_desc": "جرّب تسجيل الدخول مرة أخرى.",
+  "notifications.empty_unread": "لا توجد إشعارات غير مقروءة",
+  "notifications.default_title": "إشعار",
+  "notifications.view_all": "عرض الكل",
+  "archive.noAttachments": "لا توجد مرفقات",
+  "common.reset": "إعادة تعيين",
+  "archive.saveSuccess": "تم الحفظ بنجاح",
+  "archive.saveError": "فشل في الحفظ",
+  "archive.normal": "عادي",
+  "archive.urgent": "عاجل",
+  "archive.topPriority": "عاجل جداً",
+  "archive.secret": "سري",
+  "archive.notes": "ملاحظات",
+  "archive.notesPlaceholder": "اكتب ملاحظاتك هنا...",
+  "common.saving": "جاري الحفظ...",
+  "login.loginError": "خطأ في تسجيل الدخول",
+  "reports.description": "إنشاء وتصدير تقارير شاملة عن الأرشيف",
+  "reports.selectRange": "حدد الفترة الزمنية",
+  "reports.fromDate": "من تاريخ",
+  "reports.toDate": "إلى تاريخ",
+  "reports.type": "نوع المعاملة",
+  "reports.resultsCount": "عدد النتائج",
+  "reports.exportDesc": "تصدير البيانات",
+  "reports.printPDF": "طباعة PDF",
+  "reports.exportCSV": "تصدير CSV",
+  "reports.preview": "معاينة",
+  "reports.moreDocs": "معاملات إضافية",
+  "reports.noData": "لا توجد بيانات",
+  "reports.changeFilters": "جرّب تغيير الفلاتر",
+  "user.form.position_placeholder": "أدخل المسمى الوظيفي"
 }
