--- a/locales/en.json
+++ b/locales/en.json
@@ -561,5 +561,34 @@
   "audit.action.activity": "Activity",
   "audit.details.none": "No details",
   "login.cache_cleared": "Cache Cleared",
-  "login.cache_cleared_desc": "Please try logging in again."
+  "login.cache_cleared_desc": "Please try logging in again.",
+  "notifications.empty_unread": "No unread notifications",
+  "notifications.default_title": "Notification",
+  "notifications.view_all": "View All",
+  "archive.noAttachments": "No attachments",
+  "common.reset": "Reset",
+  "archive.saveSuccess": "Saved successfully",
+  "archive.saveError": "Failed to save",
+  "archive.normal": "Normal",
+  "archive.urgent": "Urgent",
+  "archive.topPriority": "Top Priority",
+  "archive.secret": "Secret",
+  "archive.notes": "Notes",
+  "archive.notesPlaceholder": "Write your notes here...",
+  "common.saving": "Saving...",
+  "login.loginError": "Login error",
+  "reports.description": "Generate and export comprehensive archive reports",
+  "reports.selectRange": "Select date range",
+  "reports.fromDate": "From Date",
+  "reports.toDate": "To Date",
+  "reports.type": "Document Type",
+  "reports.resultsCount": "Results",
+  "reports.exportDesc": "Export data",
+  "reports.printPDF": "Print PDF",
+  "reports.exportCSV": "Export CSV",
+  "reports.preview": "Preview",
+  "reports.moreDocs": "More documents",
+  "reports.noData": "No data available",
+  "reports.changeFilters": "Try changing filters",
+  "user.form.position_placeholder": "Enter position"
 }
