Fix translations, resolve build errors, and update project configuration

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -830,5 +830,204 @@
   "user_settings.password_change_failed": "فشل تغيير كلمة المرور",
   "user_settings.enter_current_password": "أدخل كلمة المرور الحالية",
   "user_settings.enter_new_password": "أدخل كلمة المرور الجديدة",
-  "user_settings.enter_confirm_password": "أكد كلمة المرور الجديدة"
+  "user_settings.enter_confirm_password": "أكد كلمة المرور الجديدة",
+  "new.key.tkxtvu": "متوسط الاستهلاك (طبيعي)",
+  "new.key.p8sa6a": "من أصل 10 GB",
+  "new.key.p6bjcx": "عدد المرفقات",
+  "new.key.9fyql7": "الوثائق المؤرشفة",
+  "new.key.1faeys": "خطأ",
+  "new.key.pr4y0r": "حجم الملف أكبر من 50 ميجابايت",
+  "new.key.5esn9c": "اعتماد وتوقيع المستند",
+  "new.key.1ktxe4": "اختر التوقيع أو الختم ثم اسحبه للمكان المطلوب على المستند",
+  "new.key.b6cwm5": "توسيط",
+  "new.key.mtf3o6": "محاذاة تلقائية",
+  "new.key.xtzvei": "اسحب التوقيع/الختم",
+  "new.key.nkrwo5": "جاري التحميل",
+  "new.key.iggxn3": "اختر نوع الاعتماد",
+  "new.key.aux3wf": "التوقيع",
+  "new.key.smt68h": "ختم القسم",
+  "new.key.51c0y2": "حجم التوقيع/الختم",
+  "new.key.gjmayg": "معلومات التوضيع",
+  "new.key.gwux80": "الحجم:",
+  "new.key.otozop": "إلغاء",
+  "new.key.01ngdc": "تصغير",
+  "new.key.1setwe": "تكبير",
+  "new.key.w7g2dm": "إعادة",
+  "new.key.3joyua": "توسيط التوقيع",
+  "new.key.x8hqk6": "معاينة المستند",
+  "new.key.syiuj3": "الختم",
+  "new.key.guxsna": "✅ تم الاعتماد",
+  "new.key.y41uxn": "تم اعتماد المستند وإضافة التوقيع/الختم بنجاح",
+  "new.key.pkvm40": "فشل اعتماد المستند",
+  "new.key.smhu0i": "⚠️ توقيع مطلوب",
+  "new.key.7q406g": "❌ خطأ",
+  "new.key.oijdp2": "جاري الاعتماد...",
+  "new.key.xmjgkp": "تأكيد الاعتماد",
+  "new.key.mtqwjr": "إعادة التحميل",
+  "new.key.5c1asb": "هيكلية ArchivX",
+  "new.key.2h35qm": "\n          نظام متكامل مبني على معايير الحوكمة السعودية (NDA) وأمن المعلومات السيبرانية.\n        ",
+  "new.key.e4e7eb": "تصميم REST API (Endpoints)",
+  "new.key.a7euaz": "إنشاء معاملة جديدة وتوليد الباركود تلقائياً.",
+  "new.key.vwasnw": "جلب تفاصيل المعاملة عبر قراءة الباركود.",
+  "new.key.u9qmsu": "تحويل حالة المعاملة إلى 'مؤرشفة' بعد الانتهاء.",
+  "new.key.m02lbr": "أمن الاتصال",
+  "new.key.08kved": "\n                جميع الطلبات تتطلب Authorization Header بترميز Bearer JWT. يتم تجديد التوكن كل ساعة لضمان أعلى درجات الأمان.\n              ",
+  "new.key.gvibsj": "هل أنت جاهز للإنتاج؟",
+  "new.key.uac948": "هذا النظام يمثل MVP متكامل وقابل للتحول فوراً إلى بيئة Production عبر ربطه بقاعدة بيانات PostgreSQL حقيقية.",
+  "new.key.un45ci": "واجهات فائقة السرعة مع دعم كامل للغة العربية والاتجاه RTL.",
+  "new.key.rs4vhg": "مفاتيح أساسية مرتبة زمنياً تضمن سرعة البحث وتفرد السجلات عالمياً.",
+  "new.key.snpp95": "تشفير البيانات الحساسة في طبقة قاعدة البيانات لضمان خصوصية المراسلات.",
+  "new.key.s498lo": "بنية API مرنة تسمح بالتكامل مع الأنظمة الحكومية (مثل أبشر أو سداد).",
+  "new.key.2a9n9x": "توليد باركود SVG بدقة متناهية تضمن القراءة الصحيحة من أول محاولة.",
+  "new.key.jla807": "نظام صلاحيات متطور (مدير، مدخل بيانات، مراجع) مع Audit Trail كامل.",
+  "new.key.n6d227": "مؤرشفة",
+  "new.key.ww1jax": "عمليات اليوم",
+  "new.key.7egl6s": "تسجيلات دخول",
+  "new.key.5see7q": "مستخدمين نشطين",
+  "new.key.y5boq4": "أخطاء",
+  "new.key.cji5of": "كل الفترات",
+  "new.key.b3243e": "اليوم",
+  "new.key.7j2q9k": "آخر 7 أيام",
+  "new.key.m5wcho": "آخر 30 يوم",
+  "new.key.co8a2n": "جميع العمليات",
+  "new.key.ct9ode": "تسجيل دخول/خروج",
+  "new.key.gowo99": "إنشاء/إضافة",
+  "new.key.8x92zx": "تعديل",
+  "new.key.onrqgj": "حذف",
+  "new.key.3nr9i1": "طباعة",
+  "new.key.b9edk9": "جاري تحميل السجلات...",
+  "new.key.gvw8f0": "لا توجد سجلات مطابقة للبحث",
+  "new.key.gq6s3y": "نوع الكيان",
+  "new.key.epyqqt": "معرّف الكيان",
+  "new.key.na0rwm": "عنوان IP",
+  "new.key.242vyk": "تفاصيل العملية",
+  "new.key.oj91vl": "عدد العناصر في الصفحة",
+  "new.key.9cfkjt": "تصدير السجلات",
+  "new.key.fpxwyf": "بحث في السجلات...",
+  "new.key.kff6c1": "النظام",
+  "new.key.ld9qch": "طباعة ملصق حراري",
+  "new.key.slvsdb": "حفظ كصورة PNG",
+  "new.key.3mij8b": "وارد",
+  "new.key.5fsw78": "صادر",
+  "new.key.wca6cc": "بث الكاميرا لمسح الباركود",
+  "new.key.6c24cm": "عاجل",
+  "new.key.tdl4iu": "جديد",
+  "new.key.59cjy1": "تغيير كلمة المرور",
+  "new.key.tnwgev": "قم بتحديث كلمة المرور الخاصة بك بشكل دوري للحفاظ على أمان حسابك.",
+  "new.key.lua9tj": "كلمة المرور الحالية",
+  "new.key.h7osnn": "كلمة المرور الجديدة",
+  "new.key.s5fi6x": "تأكيد كلمة المرور",
+  "new.key.l77x8y": "جارٍ المعالجة...",
+  "new.key.h4pevx": "تحديث كلمة المرور",
+  "new.key.fl4px7": "أدخل كلمة المرور الحالية...",
+  "new.key.ioli9q": "أدخل كلمة المرور الجديدة...",
+  "new.key.r18nn9": "أعد كتابة كلمة المرور...",
+  "new.key.0piscv": "كلمتا المرور غير متطابقتين",
+  "new.key.du8478": "كلمة المرور يجب أن تكون على الأقل 6 أحرف",
+  "new.key.t4r2bk": "تم تحديث كلمة المرور بنجاح",
+  "new.key.ofiet2": "تم بنجاح",
+  "new.key.13xjg5": "تم تحديث كلمة المرور الخاصة بك",
+  "new.key.kpr24p": "فشل تغيير كلمة المرور",
+  "new.key.iewttb": "عاجل جداً",
+  "new.key.xpy7gp": "عاجله",
+  "new.key.fafis5": "عادي",
+  "new.key.aalvvw": "عاديه",
+  "new.key.c0aose": "نوع القيد",
+  "new.key.1okjr8": "الكل",
+  "new.key.ceqt83": "تعديل القيد",
+  "new.key.xdxafp": "خطأ غير متوقع",
+  "new.key.1zr2fe": "\r\n              حدث خطأ في التطبيق. الرجاء محاولة تحديث الصفحة أو التواصل مع الدعم الفني إذا استمرت المشكلة.\r\n            ",
+  "new.key.7jlidb": "إعادة محاولة",
+  "new.key.azd003": "تثبيت MDLBEAST",
+  "new.key.s7138l": "\r\n            ثبّت التطبيق على جهازك للوصول السريع والعمل بدون اتصال\r\n          ",
+  "new.key.cjei03": "تثبيت التطبيق",
+  "new.key.mopwuy": "العربية",
+  "new.key.56lbpw": "اللغة الثانوية",
+  "new.key.vnf8el": "سيتم تطبيق اللغة المختارة على جميع عناصر الواجهة وسيتم إعادة تحميل الصفحة تلقائياً.",
+  "new.key.kjjp33": "🔄 تم تحديث النظام إلى إصدار جديد\nبياناتك محفوظة ...",
+  "new.key.9emrts": "إغلاق القائمة",
+  "new.key.4korbe": "فتح القائمة",
+  "new.key.xz9r7e": "مرسل من:",
+  "new.key.9205ud": "مرسل إلى:",
+  "new.key.mzitmm": "تاريخ الخطاب:",
+  "new.key.60i4fd": "الأولوية:",
+  "new.key.lrh6uh": "درجة السرية:",
+  "new.key.cd1hws": "البيان والوصف الرسمي:",
+  "new.key.u25ofu": "ختم المؤسسة المعتمد",
+  "new.key.jpyszm": "يعتمد،، الإدارة العامة",
+  "new.key.b3lqxi": "طباعة خطاب A4",
+  "new.key.6u4kyk": "زوايا البناء للإستشارات الهندسية",
+  "new.key.rzaoc6": "عام",
+  "new.key.pjemdi": "تم قيد هذه المعاملة رقمياً وتوثيقها في السجل الموحد للمؤسسة، وتعتبر هذه النسخة أصلية بموجب الباركود المرجعي المسجل في أنظمة الحوكمة الرقمية.",
+  "new.key.82wuaj": "المدير التنفيذي",
+  "new.key.gz8snw": "تطبيق ختم المستند الرقمي",
+  "new.key.obe6z2": "قم بسحب الختم لوضعه في المكان المناسب على المستند",
+  "new.key.zahmch": "وضع المعاينة والدمغ",
+  "new.key.35blp3": "المستند غير متوفر للمعاينة",
+  "new.key.h6zrx2": "حجم الختم",
+  "new.key.0o5fs8": "صغير",
+  "new.key.n2uuuw": "افتراضي",
+  "new.key.75dwjj": "المرفق",
+  "new.key.gbmnxj": "مرفق 1",
+  "new.key.coaq07": "تدوير الملف",
+  "new.key.piimqs": "مسح الختم",
+  "new.key.32ekks": "جلستك انتهت",
+  "new.key.inpqoy": "يرجى تسجيل الدخول مرة أخرى لحماية بياناتك.",
+  "new.key.cusxmh": "اذهب لتسجيل الدخول",
+  "new.key.vpn4ha": "فشل تحميل المعاينة",
+  "new.key.77ojhp": "جارٍ تجهيز المعاينة…",
+  "new.key.qnqwrz": "عرض الملخص",
+  "new.key.3lajib": "إغلاق",
+  "new.key.flxnr6": "لا يوجد بيان لعرضه.",
+  "new.key.mnrdsd": "جاري التحميل",
+  "new.key.f7y72y": "يرجى الانتظار قليلاً، قد تستغرق بعض العمليات وقتًا",
+  "new.key.u0zu52": "غير نشط",
+  "new.key.1b0kgn": "تفعيل الجميع",
+  "new.key.g9euun": "إلغاء الجميع",
+  "new.key.6z4cq9": "* مختلف عن الدور",
+  "new.key.dmzvj3": "غير مسموح",
+  "new.key.fpcbfb": "لا يمكن نقل المستخدم تحت أحد التابعين له",
+  "new.key.ccv9y2": "تم النقل",
+  "new.key.fvefot": "فشل نقل المستخدم",
+  "new.key.y67v0e": "تم التحديث",
+  "new.key.h45du7": "تم تحديث بيانات المستخدم بنجاح",
+  "new.key.mnea4e": "تم الإنشاء",
+  "new.key.czl5l8": "تم إنشاء المستخدم الجديد بنجاح",
+  "new.key.wjo9hm": "فشل حفظ المستخدم",
+  "new.key.n5kma4": "لم يتم الحصول على رابط الملف",
+  "new.key.n733ul": "✅ تم الرفع",
+  "new.key.ktsdwi": "❌ فشل الرفع",
+  "new.key.7v3omg": "فشل رفع الملف",
+  "new.key.vfvtej": "الملف الشخصي",
+  "new.key.ratx9j": "إدارة بياناتك والتوقيع والختم",
+  "new.key.xv37yo": "الاسم الكامل",
+  "new.key.xonpjt": "البريد الإلكتروني",
+  "new.key.13fngm": "الدور الوظيفي",
+  "new.key.8ovgwj": "التوقيع والختم",
+  "new.key.gcylk8": "✓ تم الرفع",
+  "new.key.8z3vdy": "التوقيع الشخصي",
+  "new.key.9ktbmy": "لا يوجد توقيع",
+  "new.key.v88pv6": "يفضل صورة شفافة (PNG) بخلفية بيضاء",
+  "new.key.t09xba": "لا يوجد ختم",
+  "new.key.ph5k5r": "✅ تم الرفع بنجاح",
+  "new.key.fi5d2u": "مدير نظام",
+  "new.key.r4zoim": "مدير تنفيذي",
+  "new.key.fg3v8a": "مدير مباشر",
+  "new.key.sslfao": "مستخدم عادي",
+  "new.key.mqfjq4": "جارٍ الرفع...",
+  "new.key.pvk4uq": "تغيير التوقيع",
+  "new.key.g8o1ib": "رفع توقيع",
+  "new.key.uuuqdn": "تغيير الختم",
+  "new.key.p1snsu": "رفع ختم",
+  "new.key.z4zh6e": "مركز الإتصالات الإدارية - MDLBEAST",
+  "new.key.kjtued": "الباركود",
+  "new.key.86qtwg": "النوع",
+  "new.key.f9qhpu": "المرسل",
+  "new.key.tuk67u": "المستقبل",
+  "new.key.euz7yf": "التاريخ",
+  "new.key.evow01": "الموضوع",
+  "new.key.3yn3iw": "الأولوية",
+  "new.key.hgd4pf": "الحالة",
+  "auth.system_update_notice": "🔄 تم تحديث النظام إلى إصدار جديد\nبياناتك محفوظة - يرجى تسجيل الدخول مرة أخرى",
+  "auth.got_it": "فهمت"
 }
