--- a/locales/en.json
+++ b/locales/en.json
@@ -830,5 +830,204 @@
   "user_settings.password_change_failed": "Failed to change password",
   "user_settings.enter_current_password": "Enter current password",
   "user_settings.enter_new_password": "Enter new password",
-  "user_settings.enter_confirm_password": "Confirm new password"
+  "user_settings.enter_confirm_password": "Confirm new password",
+  "new.key.tkxtvu": "Average Consumption (Normal)",
+  "new.key.p8sa6a": "Out of 10 GB",
+  "new.key.p6bjcx": "Attachment Count",
+  "new.key.9fyql7": "Archived Documents",
+  "new.key.1faeys": "Error",
+  "new.key.pr4y0r": "File size exceeds 50MB",
+  "new.key.5esn9c": "Approve and Sign Document",
+  "new.key.1ktxe4": "Select signature or stamp then drag to desired location on the document",
+  "new.key.b6cwm5": "Center",
+  "new.key.mtf3o6": "Auto Align",
+  "new.key.xtzvei": "Drag Signature/Stamp",
+  "new.key.nkrwo5": "Loading",
+  "new.key.iggxn3": "Select Approval Type",
+  "new.key.aux3wf": "Signature",
+  "new.key.smt68h": "Department Stamp",
+  "new.key.51c0y2": "Signature/Stamp Size",
+  "new.key.gjmayg": "Position Info",
+  "new.key.gwux80": "Size:",
+  "new.key.otozop": "Cancel",
+  "new.key.01ngdc": "Zoom Out",
+  "new.key.1setwe": "Zoom In",
+  "new.key.w7g2dm": "Reset",
+  "new.key.3joyua": "Center Signature",
+  "new.key.x8hqk6": "Document Preview",
+  "new.key.syiuj3": "Stamp",
+  "new.key.guxsna": "✅ Approved",
+  "new.key.y41uxn": "Document approved and signature/stamp added successfully",
+  "new.key.pkvm40": "Document approval failed",
+  "new.key.smhu0i": "⚠️ Signature Required",
+  "new.key.7q406g": "❌ Error",
+  "new.key.oijdp2": "Approving...",
+  "new.key.xmjgkp": "Confirm Approval",
+  "new.key.mtqwjr": "Reload",
+  "new.key.5c1asb": "ArchivX Architecture",
+  "new.key.2h35qm": "نظام متكامل مبني على معايير الحوكمة السعودية (NDA) وأمن المعلومات السيبرانية.",
+  "new.key.e4e7eb": "REST API Design (Endpoints)",
+  "new.key.a7euaz": "Create new transaction and generate barcode automaticallly.",
+  "new.key.vwasnw": "Fetch transaction details via barcode scan.",
+  "new.key.u9qmsu": "Change transaction status to 'Archived' upon completion.",
+  "new.key.m02lbr": "Connection Security",
+  "new.key.08kved": "جميع الطلبات تتطلب Authorization Header بترميز Bearer JWT. يتم تجديد التوكن كل ساعة لضمان أعلى درجات الأمان.",
+  "new.key.gvibsj": "Ready for Production?",
+  "new.key.uac948": "هذا النظام يمثل MVP متكامل وقابل للتحول فوراً إلى بيئة Production عبر ربطه بقاعدة بيانات PostgreSQL حقيقية.",
+  "new.key.un45ci": "واجهات فائقة السرعة مع دعم كامل للغة العربية والاتجاه RTL.",
+  "new.key.rs4vhg": "مفاتيح أساسية مرتبة زمنياً تضمن سرعة البحث وتفرد السجلات عالمياً.",
+  "new.key.snpp95": "تشفير البيانات الحساسة في طبقة قاعدة البيانات لضمان خصوصية المراسلات.",
+  "new.key.s498lo": "بنية API مرنة تسمح بالتكامل مع الأنظمة الحكومية (مثل أبشر أو سداد).",
+  "new.key.2a9n9x": "توليد باركود SVG بدقة متناهية تضمن القراءة الصحيحة من أول محاولة.",
+  "new.key.jla807": "نظام صلاحيات متطور (مدير، مدخل بيانات، مراجع) مع Audit Trail كامل.",
+  "new.key.n6d227": "Archived",
+  "new.key.ww1jax": "Today's Operations",
+  "new.key.7egl6s": "Logins",
+  "new.key.5see7q": "Active Users",
+  "new.key.y5boq4": "Errors",
+  "new.key.cji5of": "All Periods",
+  "new.key.b3243e": "Today",
+  "new.key.7j2q9k": "Last 7 Days",
+  "new.key.m5wcho": "Last 30 Days",
+  "new.key.co8a2n": "All Operations",
+  "new.key.ct9ode": "Login/Logout",
+  "new.key.gowo99": "Create/Add",
+  "new.key.8x92zx": "Edit",
+  "new.key.onrqgj": "Delete",
+  "new.key.3nr9i1": "Print",
+  "new.key.b9edk9": "Loading Logs...",
+  "new.key.gvw8f0": "No matching logs found",
+  "new.key.gq6s3y": "Entity Type",
+  "new.key.epyqqt": "Entity ID",
+  "new.key.na0rwm": "IP Address",
+  "new.key.242vyk": "Operation Details",
+  "new.key.oj91vl": "Items per page",
+  "new.key.9cfkjt": "Export Logs",
+  "new.key.fpxwyf": "Search logs...",
+  "new.key.kff6c1": "System",
+  "new.key.ld9qch": "Print Thermal Label",
+  "new.key.slvsdb": "Save as PNG",
+  "new.key.3mij8b": "Incoming",
+  "new.key.5fsw78": "Outgoing",
+  "new.key.wca6cc": "Camera Feed for Barcode Scanning",
+  "new.key.6c24cm": "Urgent",
+  "new.key.tdl4iu": "New",
+  "new.key.59cjy1": "Change Password",
+  "new.key.tnwgev": "قم بتحديث كلمة المرور الخاصة بك بشكل دوري للحفاظ على أمان حسابك.",
+  "new.key.lua9tj": "Current Password",
+  "new.key.h7osnn": "New Password",
+  "new.key.s5fi6x": "Confirm Password",
+  "new.key.l77x8y": "Processing...",
+  "new.key.h4pevx": "Update Password",
+  "new.key.fl4px7": "Enter current password...",
+  "new.key.ioli9q": "Enter new password...",
+  "new.key.r18nn9": "Retype password...",
+  "new.key.0piscv": "Passwords do not match",
+  "new.key.du8478": "Password must be at least 6 characters",
+  "new.key.t4r2bk": "Password updated successfully",
+  "new.key.ofiet2": "Success",
+  "new.key.13xjg5": "Your password has been updated",
+  "new.key.kpr24p": "Failed to change password",
+  "new.key.iewttb": "Very Urgent",
+  "new.key.xpy7gp": "Urgent",
+  "new.key.fafis5": "Normal",
+  "new.key.aalvvw": "Normal",
+  "new.key.c0aose": "Record Type",
+  "new.key.1okjr8": "All",
+  "new.key.ceqt83": "Edit Record",
+  "new.key.xdxafp": "Unexpected Error",
+  "new.key.1zr2fe": "حدث خطأ في التطبيق. الرجاء محاولة تحديث الصفحة أو التواصل مع الدعم الفني إذا استمرت المشكلة.",
+  "new.key.7jlidb": "Retry",
+  "new.key.azd003": "Install MDLBEAST",
+  "new.key.s7138l": "ثبّت التطبيق على جهازك للوصول السريع والعمل بدون اتصال",
+  "new.key.cjei03": "Install App",
+  "new.key.mopwuy": "Arabic",
+  "new.key.56lbpw": "Secondary Language",
+  "new.key.vnf8el": "سيتم تطبيق اللغة المختارة على جميع عناصر الواجهة وسيتم إعادة تحميل الصفحة تلقائياً.",
+  "new.key.kjjp33": "🔄 System updated to new version\nYour data is safe...",
+  "new.key.9emrts": "Close Menu",
+  "new.key.4korbe": "Open Menu",
+  "new.key.xz9r7e": "Sent From:",
+  "new.key.9205ud": "Sent To:",
+  "new.key.mzitmm": "Letter Date:",
+  "new.key.60i4fd": "Priority:",
+  "new.key.lrh6uh": "Confidentiality:",
+  "new.key.cd1hws": "Official Statement & Description:",
+  "new.key.u25ofu": "Certified Org Stamp",
+  "new.key.jpyszm": "Approved, General Administration",
+  "new.key.b3lqxi": "Print A4 Letter",
+  "new.key.6u4kyk": "Zawaya Al-Binaa Engineering Consulting",
+  "new.key.rzaoc6": "General",
+  "new.key.pjemdi": "تم قيد هذه المعاملة رقمياً وتوثيقها في السجل الموحد للمؤسسة، وتعتبر هذه النسخة أصلية بموجب الباركود المرجعي المسجل في أنظمة الحوكمة الرقمية.",
+  "new.key.82wuaj": "Executive Director",
+  "new.key.gz8snw": "Apply Digital Document Stamp",
+  "new.key.obe6z2": "Drag the stamp to the appropriate location on the document",
+  "new.key.zahmch": "Preview & Stamp Mode",
+  "new.key.35blp3": "Document not available for preview",
+  "new.key.h6zrx2": "Stamp Size",
+  "new.key.0o5fs8": "Small",
+  "new.key.n2uuuw": "Default",
+  "new.key.75dwjj": "Attachment",
+  "new.key.gbmnxj": "Attachment 1",
+  "new.key.coaq07": "Rotate File",
+  "new.key.piimqs": "Clear Stamp",
+  "new.key.32ekks": "Session Expired",
+  "new.key.inpqoy": "Please login again to protect your data.",
+  "new.key.cusxmh": "Go to Login",
+  "new.key.vpn4ha": "Failed to load preview",
+  "new.key.77ojhp": "Preparing preview...",
+  "new.key.qnqwrz": "Show Summary",
+  "new.key.3lajib": "Close",
+  "new.key.flxnr6": "No statement to display.",
+  "new.key.mnrdsd": "Loading",
+  "new.key.f7y72y": "Please wait, some operations may take time",
+  "new.key.u0zu52": "Inactive",
+  "new.key.1b0kgn": "Activate All",
+  "new.key.g9euun": "Cancel All",
+  "new.key.6z4cq9": "* Different from role",
+  "new.key.dmzvj3": "Not Allowed",
+  "new.key.fpcbfb": "Cannot move user under one of their subordinates",
+  "new.key.ccv9y2": "Moved",
+  "new.key.fvefot": "Failed to move user",
+  "new.key.y67v0e": "Updated",
+  "new.key.h45du7": "User data updated successfully",
+  "new.key.mnea4e": "Created",
+  "new.key.czl5l8": "New user created successfully",
+  "new.key.wjo9hm": "Failed to save user",
+  "new.key.n5kma4": "File link not obtained",
+  "new.key.n733ul": "✅ Uploaded",
+  "new.key.ktsdwi": "❌ Upload Failed",
+  "new.key.7v3omg": "File upload failed",
+  "new.key.vfvtej": "Profile",
+  "new.key.ratx9j": "Manage your data, signature and stamp",
+  "new.key.xv37yo": "Full Name",
+  "new.key.xonpjt": "Email",
+  "new.key.13fngm": "Job Role",
+  "new.key.8ovgwj": "Signature and Stamp",
+  "new.key.gcylk8": "✓ Uploaded",
+  "new.key.8z3vdy": "Personal Signature",
+  "new.key.9ktbmy": "No Signature",
+  "new.key.v88pv6": "Transparent PNG with white background preferred",
+  "new.key.t09xba": "No Stamp",
+  "new.key.ph5k5r": "✅ Uploaded successfully",
+  "new.key.fi5d2u": "Admin",
+  "new.key.r4zoim": "Executive Manager",
+  "new.key.fg3v8a": "Direct Manager",
+  "new.key.sslfao": "Regular User",
+  "new.key.mqfjq4": "Uploading...",
+  "new.key.pvk4uq": "Change Signature",
+  "new.key.g8o1ib": "Upload Signature",
+  "new.key.uuuqdn": "Change Stamp",
+  "new.key.p1snsu": "Upload Stamp",
+  "new.key.z4zh6e": "Administrative Communications Center - MDLBEAST",
+  "new.key.kjtued": "Barcode",
+  "new.key.86qtwg": "Type",
+  "new.key.f9qhpu": "Sender",
+  "new.key.tuk67u": "Receiver",
+  "new.key.euz7yf": "Date",
+  "new.key.evow01": "Subject",
+  "new.key.3yn3iw": "Priority",
+  "new.key.hgd4pf": "Status",
+  "auth.system_update_notice": "🔄 System updated to new version\nYour data is safe - Please login again",
+  "auth.got_it": "Got it"
 }
